# nclink_adapter_windows

./: README.md  无证书适配器演示文档.docx  适配器使用说明.md  适配器环境安装说明.docx
MTConnect/: CMakeLists.txt  MTConnect  Makefile  cmake_install.cmake  readme.txt
MTConnect/conf/: MTConnect.json
MTConnect/include/: ActionListener.h  CallBack.h  Config.h  DeviceModel.h  FlowCollection.h  MTConnectAdapter.h  ProbeQueryRequest.h  ProbeSetRequest.h  ProbeVersionResponse.h  ProcessJsonData.h  QueryRequest.h  RegisterResponse.h  SetRequest.h  utils.h
MTConnect/src/: ActionListener.cpp  CallBack.cpp  Config.cpp  DeviceModel.cpp  FlowCollection.cpp  MTConnectAdapter.cpp  ProbeQueryRequest.cpp  ProbeSetRequest.cpp  ProbeVersionResponse.cpp  QueryRequest.cpp  SetRequest.cpp  main.cpp  utils.cpp
MTConnect/test_script/: ProbeQueryRequest.sh  QueryRequest.sh
MTConnect/test_xml_file/: stream.xml
ModBus/: CMakeLists.txt  Makefile  ModBus  README.en.md  README.md  cmake_install.cmake  install_mtc.sh
ModBus/conf/: Modbus.json  ModbusModel.json
ModBus/include/: ActionListener.h  CallBack.h  Config.h  DeviceModel.h  ErrorReason.h  FlowCollection.h  ModbusAdapter.h  ModbusInterface.h  ParseXmlStream.h  ProbeQueryRequest.h  ProbeVersionResponse.h  QueryRequest.h  RegisterResponse.h  Sample.h  SetRequest.h  Utils.h
ModBus/src/: ActionListener.cpp  CallBack.cpp  Config.cpp  DeviceModel.cpp  ErrorReason.cpp  FlowCollection.cpp  ModbusAdapter.cpp  ModbusInterface.cpp  ParseXmlStream.cpp  ProbeQueryRequest.cpp  ProbeSetRequest.cpp  ProbeVersionResponse.cpp  ProcessJsonData.cpp  QueryRequest.cpp  RegisterResponse.cpp  Sample.cpp  SetRequest.cpp  Utils.cpp  main.cpp
OPC-UA/: Makefile  OPC-UA-Server  cmake_install.cmake  副本.txt
OPC-UA/OPCUAServer/: OPCUAServer.cpp
OPC-UA/conf/: OPCUA.json  model.json  testmodel.json
OPC-UA/include/: ActionListener.h  Config.h  FlowCollection.h  OPCUAAdapter.h  OPCUAInterface.h  OPCUAServer.h  ParseXmlData.h  ProbeQueryRequest.h  ProbeSetRequest.h  ProcessJsonData.h  QueryRequest.h  SetRequest.h  Utils.h  tools.h
OPC-UA/src/: CallBack.cpp  Config.cpp  FlowCollection.cpp  OPCUAAdapter.cpp  OPCUAInterface.cpp  ProbeQueryRequest.cpp  ProbeSetRequest.cpp  ProbeVersionResponse.cpp  QueryRequest.cpp  SetRequest.cpp  Utils.cpp  main.cpp  tools.cpp
flow_collection/ndpi/: conf.json  pcap_to_flows(simplify).c  pcap_to_flows.c  readme.md  s7.csv  test.csv  test.json
flow_collection/ndpi/include/: cJSON.h  ndpi_config.h  ndpi_config.h.in  ndpi_protocols.h
flow_collection/ndpi/lib/: libndpi.dll.4.7.0  libndpi.lib  ndpi_main.c
mosquitto/: mosquitto.conf  pwfile.example
sample_pcap/: Modbus.pcapng  cip_safety_bad_crc_timestamp_0_a.pcapng
工业互联网协议模拟器/MTConnect/cppagent-2.0.0.11-win64-0903/cppagent-2.0.0.11-win64-0903/: 使用说明.doc
工业互联网协议模拟器/MTConnect/cppagent-2.0.0.11-win64-0903/cppagent-2.0.0.11-win64-0903/cppagent-2.0.0.11-win64/schemas/: MTConnectAssets_1.2.xsd  MTConnectDevices_1.3.xsd  MTConnectStreams_1.0.xsd
工业互联网协议模拟器/Modbus/: modbus.mthings
